# prog2-test

./: .gitignore  textdatei.txt
Blatt1/: CMakeLists.txt  Mensche.cpp  Mensche.h  Person.cpp  Person.h  main.cpp
blatt2/: CMakeLists.txt  euroCheck.cpp  euroCheck.h  main.cpp
blatt3/: CMakeLists.txt
blatt3/src/: CMakeLists.txt
blatt3/src/app/: CMakeLists.txt  main.cpp  test.cpp
blatt3/src/libGameObjects/: CMakeLists.txt  Missile.cpp  Missile.h  Ship.cpp  Ship.h
blatt3/src/libSea/: CMakeLists.txt  Object.cpp
